--- a/module/config-server/pom.xml
+++ b/module/config-server/pom.xml
@@ -59,6 +59,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>1.1.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
             <groupId>net.yanrc</groupId>
             <artifactId>xpring-common</artifactId>
             <version>1.0.1-SNAPSHOT</version>
