--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -11,7 +11,7 @@
     <properties>
         <java-version>1.8</java-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <org.springframework-version>4.3.3.RELEASE</org.springframework-version>
+        <org.springframework-version>4.3.7.RELEASE</org.springframework-version>
         <org.aspectj-version>1.6.10</org.aspectj-version>
         <org.slf4j-version>1.7.21</org.slf4j-version>
         <faster.jackson>2.7.3</faster.jackson>
@@ -159,14 +159,13 @@
         <!-- mybatis-->
         <dependency>
             <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>1.3.0</version>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.2</version>
         </dependency>
-
         <dependency>
             <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.4.1</version>
+            <artifactId>mybatis-spring</artifactId>
+            <version>1.3.1</version>
         </dependency>
 
         <dependency>
@@ -368,18 +367,21 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>2.7.19</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>2.6.0</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
