--- a/module/act-server/pom.xml
+++ b/module/act-server/pom.xml
@@ -59,6 +59,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.0.5.RELEASE</version>
+        </dependency>
+
+        <dependency>
             <groupId>net.yanrc</groupId>
             <artifactId>act-api</artifactId>
             <version>1.0.1-SNAPSHOT</version>
